# wisconsinCancerClassification

./: CITATION.cff  README.md
ADAML-library/: README.md  pyproject.toml
ADAML-library/ADAMLL/: NN.py  __init__.py  activations.py  optimizers.py  plot.py  util.py
ADAML-library/ADAMLL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
report/: Makefile  jmlr2e.sty  report.aux  report.bbl  report.bib  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  report.xdv
report/tikzfigures/: backwards.tex  data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  forward.tex  nn.tex  nnActivation.tex  universal.tex
src/: regression.ipynb  universalApproximation.ipynb
src/.ipynb_checkpoints/: classification-checkpoint.ipynb
